implementado geração de relatórios - resumo e extrato da conta

--- a/WebContent/restrito/conta.xhtml
+++ b/WebContent/restrito/conta.xhtml
@@ -112,6 +112,39 @@
 			</h:dataTable>
 		</h:form>
 		
+		<h:panelGrid columns="4">
+			<h:form id="impressao">
+				<h:commandLink>
+					<f:setPropertyActionListener target="#{contaBean.tipoRelatorio}"
+						value="1" />
+					<p:fileDownload value="#{contaBean.arquivoRetorno}" />
+					<h:graphicImage library="imagens" name="pdf.png"
+						title="Imprimir PDF" />
+				</h:commandLink>
+				<h:commandLink>
+					<f:setPropertyActionListener target="#{contaBean.tipoRelatorio}"
+						value="2" />
+					<p:fileDownload value="#{contaBean.arquivoRetorno}" />
+					<h:graphicImage library="imagens" name="excel.png"
+						title="Imprimir Excel" />
+				</h:commandLink>
+				<h:commandLink>
+					<f:setPropertyActionListener target="#{contaBean.tipoRelatorio}"
+						value="3" />
+					<p:fileDownload value="#{contaBean.arquivoRetorno}" />
+					<h:graphicImage library="imagens" name="html.png"
+						title="Imprimir HTML" />
+				</h:commandLink>
+				<h:commandLink>
+					<f:setPropertyActionListener target="#{contaBean.tipoRelatorio}"
+						value="4" />
+					<p:fileDownload value="#{contaBean.arquivoRetorno}" />
+					<h:graphicImage library="imagens" name="ods.png"
+						title="Imprimir Planilha Open Office" />
+				</h:commandLink>
+			</h:form>
+		</h:panelGrid>
+		
 	
 	</ui:define>
 </ui:composition>
