--- a/WebContent/restrito/lancamento.xhtml
+++ b/WebContent/restrito/lancamento.xhtml
@@ -13,6 +13,7 @@
 		<br />
 		<ui:include src="lancamento_lista.xhtml" />
 		<br />		
+		<ui:include src="lancamento_relatorio.xhtml" />
 	</ui:define>
 </ui:composition>
 </html>
