--- a/WebContent/restrito/lancamento_relatorio.xhtml
+++ b/WebContent/restrito/lancamento_relatorio.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -9,7 +9,7 @@
 <ui:composition>
 	<h:form id="relatorio">
 		<h:panelGroup>
-			<fieldset><legend>Paramêtros do Relatório</legend> <h:panelGrid
+			<fieldset><legend>ParamÃªtros do RelatÃ³rio</legend> <h:panelGrid
 				columns="7">
 				<h:outputLabel value="Data Inicial: " />
 				<p:calendar value="#{lancamentoBean.dataInicialRelatorio}" pattern="dd/MM/yyyy"/>
