--- a/WebContent/publico/login.xhtml
+++ b/WebContent/publico/login.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jstl/core">
+	xmlns:f="http://java.sun.com/jsf/core">
 	
 <ui:composition template="/templates/principal.xhtml">
 
@@ -11,29 +11,21 @@
 
 		<h:form>
 			<h:commandButton action="#{usuarioBean.novo}" value="Registre-se"/>
-		</h:form>
-	
-		<h:panelGroup rendered="#{!empty param.login_error}">
-			<span style="font-color:red"> Erro ao efetuar o login.</span><br />
-			<br/>
-			Motivo: #{SPRING_SECURITY_LAST_EXCEPTION.message}
-		</h:panelGroup>
+		</h:form>		
 
-		<form id="login" method="post" action="${request.contextPath}/j_spring_security_check">
+		<form id="login" method="post" action="j_security_check">
 		<table>
 			<tr><td>Login</td>
-				<td><input type='text' name='j_username'/></td></tr>
+				<td><input type='text' name='j_username' value="${param.j_username}" /></td></tr>
 			<tr><td>Senha</td>
-				<td><input type='password' name='j_password'/></td></tr>
-			<tr><td align="right"><input type="checkbox" name="_spring_security_remember_me"/></td>
+				<td><input type='password' name='j_password' id="password"/></td></tr>
+			<tr><td align="right"><input type="checkbox" name="_remember_me"/></td>
 				<td>Entrar automaticamente</td></tr>
 			<tr><td>&nbsp;</td>
 				<td><input type="submit" value="Entrar"/></td>
 			</tr>
 		</table>
-		<script>
-			document.getElementById("login").j_username.value = "#{SPRING_SECURITY_LAST_USERNAME}";
-		</script>
+		
 		</form>
 	</ui:define>
 </ui:composition>
