resolvendo problema com CDI wildfly

--- a/WebContent/publico/login.xhtml
+++ b/WebContent/publico/login.xhtml
@@ -16,7 +16,7 @@
 		<form id="login" method="post" action="j_security_check">
 		<table>
 			<tr><td>Login</td>
-				<td><input type='text' name='j_username' value="${param.j_username}" /></td></tr>
+				<td><input type='text' name='j_username' /></td></tr>
 			<tr><td>Senha</td>
 				<td><input type='password' name='j_password' id="password"/></td></tr>
 			<tr><td align="right"><input type="checkbox" name="_remember_me"/></td>
