--- a/WebContent/restrito/principal.xhtml
+++ b/WebContent/restrito/principal.xhtml
@@ -6,7 +6,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:util="http://java.sun.com/jsf/composite/components/util">
 
-<ui:composition template="/templates/principal.xhtml">
+<ui:composition template="/templates/interna.xhtml">
 
 	<ui:define name="titulo">
 	Financeiro Web
