--- a/WebContent/restrito/menu_sistema.xhtml
+++ b/WebContent/restrito/menu_sistema.xhtml
@@ -2,11 +2,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition>
-	<!-- <sec:ifAnyGranted roles="ROLE_USUARIO"> -->
+	<c:if test="#{contextoBean.usuarioTemPermissao('ROLE_USUARIO')}">
 		<h:form id="menu">
 			<table width="100%">
 			<tr>
@@ -27,21 +28,21 @@
 					</h:selectOneMenu>						
 				</td>
 				<td align="left">
-					<!-- <sec:ifAnyGranted roles="ROLE_ADMINISTRADOR"> -->
+					<c:if test="#{contextoBean.usuarioTemPermissao('ROLE_ADMIN')}">					
 						<h:commandLink action="/admin/principal" title="Administrativo">
 							<h:graphicImage library="imagens" name="administrativo16.png" />
 						</h:commandLink>
-					<!-- </sec:ifAnyGranted> -->
+					</c:if>
 					<h:commandLink action="/restrito/principal" title="Principal">
 						<h:graphicImage library="imagens" name="principal16.png" />
 					</h:commandLink>
-					<h:outputLink value="javascript:void(0)" onclick="document.location='#{request.contextPath}/j_spring_security_logout'" title="Sair">
+					<h:commandLink action="#{contextoBean.logout()}" title="Sair">
 						<h:graphicImage library="imagens" name="logout16.png" />
-					</h:outputLink>
+					</h:commandLink>					
 				</td>
 			</tr>
 			</table>
 		</h:form>
-	<!-- </sec:ifAnyGranted> -->
+	</c:if>
 </ui:composition>
 </html>
