--- a/WebContent/publico/login.xhtml
+++ b/WebContent/publico/login.xhtml
@@ -13,7 +13,7 @@
 			<h:commandButton action="#{usuarioBean.novo}" value="Registre-se"/>
 		</h:form>		
 
-		<form id="login" method="post" action="j_security_check">
+		<form id="login" method="post" action="#{request.contextPath}/j_security_check">
 		<table>
 			<tr><td>Login</td>
 				<td><input type='text' name='j_username' /></td></tr>
