--- a/src/main/webapp/restrito/lancamento_lista.xhtml
+++ b/src/main/webapp/restrito/lancamento_lista.xhtml
@@ -5,7 +5,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"	
-	xmlns:p="http://primefaces.prime.com.tr/ui">
+	xmlns:p="http://primefaces.org/ui">
 <ui:composition>
 	<h:form id="filtro">
 		<h:outputLabel value="Periodo" for="periodo" />
@@ -56,7 +56,7 @@
 			</p:column>
 			<p:column width="60">
 				<f:facet name="header">Saldo</f:facet>
-				<h:outputText style="color: #{lancamentoBean.saldos[index] gt 0 ? 'green' : 'red' }; text-align:right; display:block;" value="#{lancamentoBean.saldos[index]}">
+				<h:outputText style="color: #{lancamentoBean.getSaldo(index) gt 0 ? 'green' : 'red' }; text-align:right; display:block;" value="#{lancamentoBean.saldos[index]}">
 					<f:convertNumber minFractionDigits="2" maxFractionDigits="2" />
 				</h:outputText>
 			</p:column>
